traversal.snake.Snake.scala.error
Compilation error:
Snake:9: error: type mismatch;
 found   : Unit
 required: Boolean
    if (verifFin())
                ^Snake:29: warning: enclosing method verifFin has result type Unit: return value discarded
  return fin
  ^